fixed spacing for mobile

--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,8 @@
 .footer {
     color: #fff;
 }
+
+.album {
+    padding: 3%;
+  }
+  
